tests/invalid/NegationType_Invalid_2.whiley
function f(int x) -> !null & !int:
    return x
